examples/test/testpolicy18307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18307
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key3: value3
      key0: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value9
          key26: value24
          key10: value17
      podSelector:
        matchLabels:
          key28: value34
          key30: value22
